--- a/Web/Manage/View/CMBC/index.html
+++ b/Web/Manage/View/CMBC/index.html
@@ -1,69 +1,223 @@
 ﻿<extend name="Public/base_logged" />
 <block name="body">
-<section class="vbox">
-  <section>
-    <section class="hbox stretch">
-      <section id="content">
-        <section class="vbox">
-          <section class="scrollable padder">
-            <ul class="breadcrumb no-border no-radius b-b b-light pull-in">
-              <li><a href="index.html"><i class="fa fa-home"></i> 首页</a></li>
-              <li class="active">民生门户</li>
-            </ul>
-            <div class="m-b-md">
-              <h3 class="m-b-none">民生门户</h3>
-            </div>
-            <section class="panel panel-default">
-              <header class="panel-heading"> 民生门户</header>
-              <header class="panel-heading">  <a href="{:U('CMBC/Register')}" class="btn btn-s-md btn-primary btn-rounded">新增门店</a></header>
-              <div class="table-responsive">
-                <table class="table table-striped m-b-none" >
-                  <thead>
-                    <tr>
-                      <th width="10%">门店id</th>
-                      <th width="25%">名店名称</th>
-                      <th width="5%">类别</th>
-                      <th width="5%">状态</th>
-                      <th width="55%">操作</th>
-                    </tr>
-                    <foreach name="stores" item="vo" >
-	                    <tr>
-	                    <td>{$vo.id}</td>
-	                    <td>{$vo.mchntname}</td>
-	                    <td></td>
-	                    <td></td>
-                    <td>
-                    <div class="button-group">
-                    	<a href="{:U('CMBC/VerifyStore')}?id={$vo.id}" class="btn btn-s-md btn-primary btn-rounded">审核入驻</a>
-						 <!-- <a href="{:U('CMBC/BindPayment')}?id={$vo.id}" class="btn btn-s-md btn-primary btn-rounded">绑定支付</a>
-						 <a href="{:U('CMBC/Register')}?id={$vo.id}" class="btn btn-s-md btn-primary btn-rounded">修改支付</a>
-						 <a href="{:U('CMBC/ModStore')}?id={$vo.id}" class="btn btn-s-md btn-primary btn-rounded">修改门店</a>
-						  -->
-					</div>
-					</td>
-                    </tr>
-                    </foreach>
-                  </thead>
-                  <tbody>
-                  </tbody>
-                </table>
-              </div>
+  <section class="vbox">
+  	<section>
+      <section class="hbox stretch">
+        <section id="content">
+          <section class="vbox">
+            <section class="scrollable padder">
+              <header class="header bg-white b-b clearfix">
+                <div class="row m-t-sm">
+                  <div class="col-sm-9 m-b-xs">
+                    <ul class="breadcrumb no-border no-radius b-light pull-in">
+                      <li><a href="{:U('Admin/index')}"><i class="fa fa-home"></i> 首页</a></li>
+                      <?php if(UID===$current_user_id){ ?>
+                      <li>商家中心</li>
+                      <?php }else{ ?>
+                      <li><a href="{:U('DealUser/index')}">商户列表</a></li>
+                      <?php } ?>
+                      <li class="active">民生门店</li>
+                    </ul>
+                  </div>
+
+                  <div class="col-sm-3 m-b-xs">
+                    <a id="add-store" class="btn3" href="{:U('CMBC/Register')}?id={$vo.id}"><strong>新增门店</strong></a>
+                  </div>
+                  <div class="col-sm-9 m-b-xs">
+                    <div class="search_box">
+                      <form action="{:U('DealStore/index?uid='.$current_user_id)}" class="form_search" method="get">
+                        <select class="slt_field_name" data-target=".ipt_search_id" id="selectinfo">
+                          <option value="store_id"<notempty name="cond['store_id']"> selected="selected"</notempty>>门店ID</option>
+                          <eq name="manage_is_admin" value="true">
+                          <option value="user_id"<notempty name="cond['user_id']"> selected="selected"</notempty>>用户ID</option>
+                          </eq>
+                          <option value="main_shop_name"<notempty name="cond['main_shop_name']"> selected="selected"</notempty>>门店名称</option>
+
+                        </select>
+                        <input type="text" class="ipt_search_id" name="store_id" maxlength="28" value="{$cond['_seach_text']}" id="search_box"/>
+                        城市：{:W('Manage/City/three',array(array('province_code','city_code','district_code'),array(I('province_code'),I('city_code'),I('district_code'))));}
+                        <button class="btn_search">搜索</button>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="col-sm-3 m-b-xs">
+                    <form action="{:U('CmbcStore/index?uid='.$current_user_id)}" method="get">
+                      <div class="input-group">
+                        <input type="text" class="input-sm form-control" placeholder="请输入总店名或分店名或品牌名" name="content"  value="{$content}">
+                        <span class="input-group-btn">
+                          <button class="btn btn-sm btn-default" type="submit">Go!</button>
+                        </span>
+                      </div>
+                    </form>
+                  </div>
+              </header>
+
+              <section class="scrollable wrapper w-f">
+                <!--门店数据遍历-->
+
+                <div class="manageCont">
+                    <div class="table-responsive">
+                      <table class="table table-striped m-b-none">
+                        <!--表头-->
+                        <thead>
+                          <tr>
+                          <th width="10%">门店id</th>
+                          <th width="25%">名店名称</th>
+                          <th width="5%">类别</th>
+                          <th width="5%">状态</th>
+                          <th width="55%">操作</th>
+                          </tr>
+                        </thead>
+                        <!--表体-->
+                        <tbody>
+                          <foreach name="stores" item="vo" >
+	                  <tr>
+	                  <td>{$vo.id}</td>
+	                  <td>{$vo.mchntname}</td>
+	                  <td></td>
+	                  <td></td>
+                          <td>
+                           <div class="button-group">
+                    	  <a href="{:U('CMBC/VerifyStore')}?id={$vo.id}" class="popup-store-submit btn btn-primary">审核入驻</a>
+                          <a href="{:U('CMBC/ModStore')}?id={$vo.id}" class="btn btn-warning btn_store_edit">资料修改</a>
+                          <a href="{:U('CMBC/VerifyModStore')}?id={$vo.id}" class="btn btn-warning btn_store_edit">审核资料</a>
+                          <a href="{:U('CMBC/BindPayment')}?id={$vo.id}" class="btn btn-success">绑定支付</a>
+                          <a href="{:U('CMBC/BindPayment')}?id={$vo.id}" class="btn btn-info">修改支付</a>
+
+			   </div>
+			  </td>
+                          </tr>
+                          </foreach>
+
+                        </tbody>
+                      </table>
+                    </div>
+
+                </div>
+              </section>
+              <footer class="footer bg-white b-t">
+                {$_page}
+              </footer>
             </section>
           </section>
         </section>
-
-      <aside class="bg-light lter b-l aside-md hide" id="notes">
-        <div class="wrapper">Notification</div>
-      </aside>
+      </section>
     </section>
   </section>
-</section>
 </block>
 
 <block name="script">
-  <script type="text/javascript">
-  jQuery(document).ready(function($) {
-      $('.popup-qrcode-view').magnificPopup();
-  })
-  </script>
+<js href="__STATIC__/jquery.noty.packaged.min.js"/>
+<js href="__JS__/list.js"/>
+
+<script type="text/javascript" charset="utf-8">
+  $(document).ready(function(){
+	$('.popup-qrcode-view').magnificPopup();
+    $('.popup-store-submit').magnificPopup({
+      disableOn: 700,
+      type: 'iframe',
+      mainClass: 'mfp-fade',
+      removalDelay: 160,
+      preloader: false,
+      closeOnBgClick: false,
+      enableEscapeKey:false,
+      fixedContentPos: false,
+      callbacks: {
+        beforeOpen: function(){
+          $(this.content).find(".mfp-close").hide();
+        },
+        open: function(){
+          var content = this.content;
+          $(content).find(".mfp-close").hide();
+          $(content).find("iframe").load(function(event) {
+            //console.log('load2',this,arguments);
+            $(content).find(".mfp-close").show();
+          });
+        },
+        close: function(){
+          //console.log('ssss3',arguments);
+          document.location.reload();
+        }
+      }
+    });
+		$('.view_audit_status').magnificPopup({
+			type: 'iframe',type: 'iframe',
+		});
+		$('#download-store').magnificPopup({
+			disableOn: 700,
+			type: 'iframe',
+			mainClass: 'mfp-fade',
+			removalDelay: 160,
+			preloader: false,
+			closeOnBgClick: true,
+			enableEscapeKey:false,
+			fixedContentPos: false,
+			callbacks: {
+				beforeOpen: function(){
+					$(this.content).find(".mfp-close").hide();
+				},
+				open: function(){
+					var content = this.content;
+					$(content).find(".mfp-close").hide();
+					$(content).find("iframe").load(function(event) {
+						//console.log('load2',this,arguments);
+						$(content).find(".mfp-close").show();
+					});
+				},
+				close: function(){
+					//console.log('ssss3',arguments);
+					document.location.reload();
+				}
+			}
+		});
+    $('.popup-store-view').magnificPopup({
+      disableOn: 700,
+      type: 'iframe',
+      mainClass: 'mfp-fade',
+      removalDelay: 160,
+      preloader: false
+    });
+
+    $(".btn_store_edit").click(function(event){
+      var s = $(this).attr("data-audit-status");
+      if(s == "AUDITING"){
+        alert("正在审核，不能修改！");
+        event.preventDefault();
+              return false;
+      }
+      if(s == "AUDIT_SUCCESS"){
+        if(!confirm('门店已经通过审核，确认修改？')){
+          event.preventDefault();
+                  return false;
+              }
+      }
+    });
+
+    $("td>span.store_id").dblclick(toggle_detail);
+    $("a.btn_store_more").click(toggle_detail);
+    function toggle_detail(event){
+      var tr = $(this).closest('tr');
+      tr.next().toggle();
+    }
+
+    //搜索js
+    $(".search_box .slt_field_name").change(function(event){
+      var slt = $(this).attr("data-target");
+      var val = $(this).find("option:selected").attr("value");
+      if(slt && val){
+        $(this).parent().find(slt).attr("name",val);
+      }
+    });
+    $(".search_box .slt_field_name").change();
+    var vals = $(".search_box .slt_field_name option").attr("value");
+    //alert(vals);
+    $(".search_box form").submit(function(event) {
+      /*var data = $(this).serialize();
+      alert(data);
+      return false;*/
+    });
+  });
+
+</script>
+
 </block>
