--- a/Web/Manage/View/CMBC/modstore.html
+++ b/Web/Manage/View/CMBC/modstore.html
@@ -1,5 +1,4 @@
 ﻿<extend name="Public/base_logged" />
-<script src="__PUBLIC__/CMBC/js/area.js"  type="text/javascript"></script>
 <block name="body">
 <section class="vbox">
 	<section>
@@ -9,37 +8,29 @@
 					<section class="scrollable padder">
 						<div class="row">
 							<div class="col-sm-6">
-								<form data-validate="parsley" method="post" name="RegisterStore"
-									action="CMBC/RegisterStore">
+								<form data-validate="parsley" method="post" name="ModStore"
+									action="ModStore">
 									<section class="panel panel-default">
 										<input type="hidden" name="id" value="{$store.id}">
 										<header class="panel-heading">
 											<span class="h4">商户注册</span>
 										</header>
 										<div class="panel-body">
-											<p class="text-muted">该输入框不能空,请填写信息</p>
+											<p class="text-muted">请填写满信息再提交</p>
 											<div class="form-group">
 												<label>商户简称</label> <input type="text" name="mchntName"
 													value="{$store.mchntname}" class="form-control"
 													data-required="true">
 											</div>
 											<div class="form-group">
-												<label>商户全称</label> <input type="text" name="mchntFullName"
-													value="{$store.mchntfullname}" class="form-control"
-													data-required="true">
+												<label>商户全称</label>
+												 <input type="text" name="mchntFullName" value="{$store.mchntfullname}" class="form-control" data-required="true">
 											</div>
 											<div class="form-group pull-in clearfix">
-												<div class="col-sm-3">
-													<label>省份</label>
-													<div id="slt_sheng"></div>
-												</div>
-												<div class="col-sm-3">
+												<div class="col-sm-6">
 													<label>城市</label>
-													<div id="slt_shi"></div>
-												</div>
-												<div class="col-sm-3">
-													<label>区/镇</label>
-													<div id="slt_xian"></div>
+{:W('Manage/City/three',array(array('province_code','city_code','district_code'),array(I('province_code'),I('city_code'),I('district_code
+'))));}
 												</div>
 											</div>
 											<div class="form-group">
