--- a/Web/Manage/View/CMBC/register.html
+++ b/Web/Manage/View/CMBC/register.html
@@ -1,100 +1,283 @@
 ﻿<extend name="Public/base_logged" />
 <block name="body">
-<script src="__PUBLIC__/CMBC/js/area.js" type="text/javascript"></script>
-<section class="vbox">
-  <section>
-    <section class="hbox stretch">
-      <section id="content">
-        <section class="vbox">
-          <section class="scrollable padder">
-            <div class="row">
-              <div class="col-sm-6">
-                <form data-validate="parsley" method="post" name="RegisterStore" action="RegisterStore">
-                  <section class="panel panel-default">
-                    <header class="panel-heading"> <span class="h4">商户注册</span> </header>
-                    <div class="panel-body">
-                      <p class="text-muted">Please fill the information to continue</p>
-                      <div class="form-group">
-                        <label>商户简称</label>
-                        <input type="text" name="mchntName" class="form-control" data-required="true">
+  <section class="vbox">
+  	<section>
+      <section class="hbox stretch">
+        <section id="content">
+          <section class="vbox">
+            <section class="scrollable padder">
+              <header class="header bg-white b-b clearfix">
+                <div class="row m-t-sm">
+                  <div class="col-sm-9 m-b-xs">
+                    <ul class="breadcrumb no-border no-radius b-light pull-in">
+                      <li><a href="{:U('Admin/index')}"><i class="fa fa-home"></i> 首页</a></li>
+                      <?php if(UID===$current_user_id){ ?>
+                      <li>商家中心</li>
+                      <?php }else{ ?>
+                      <li><a href="{:U('DealUser/index')}">商户列表</a></li>
+                      <?php } ?>
+                      <li class="active">民生门店  /  新增门店</li>
+                    </ul>
+                  </div>
+
+                  <div class="col-sm-3 m-b-xs">
+                    <a id="add-store" class="btn3" href="{:U('CMBC/Register')}?id={$vo.id}"><strong>新增门店</strong></a>
+                  </div>
+                  <div class="col-sm-9 m-b-xs">
+                    <div class="search_box">
+                      <form action="{:U('DealStore/index?uid='.$current_user_id)}" class="form_search" method="get">
+                        <select class="slt_field_name" data-target=".ipt_search_id" id="selectinfo">
+                          <option value="store_id"<notempty name="cond['store_id']"> selected="selected"</notempty>>门店ID</option>
+                          <eq name="manage_is_admin" value="true">
+                          <option value="user_id"<notempty name="cond['user_id']"> selected="selected"</notempty>>用户ID</option>
+                          </eq>
+                          <option value="main_shop_name"<notempty name="cond['main_shop_name']"> selected="selected"</notempty>>门店名称</option>
+
+                        </select>
+                        <input type="text" class="ipt_search_id" name="store_id" maxlength="28" value="{$cond['_seach_text']}" id="search_box"/>
+                        城市：{:W('Manage/City/three',array(array('province_code','city_code','district_code'),array(I('province_code'),I('city_code'),I('district_code'))));}
+                        <button class="btn_search">搜索</button>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="col-sm-3 m-b-xs">
+                    <form action="{:U('CmbcStore/index?uid='.$current_user_id)}" method="get">
+                      <div class="input-group">
+                        <input type="text" class="input-sm form-control" placeholder="请输入总店名或分店名或品牌名" name="content"  value="{$content}">
+                        <span class="input-group-btn">
+                          <button class="btn btn-sm btn-default" type="submit">Go!</button>
+                        </span>
                       </div>
-                      <div class="form-group">
-                        <label>商户全称</label>
-                        <input type="text" name="mchntFullName"  class="form-control"   data-required="true">
-                      </div>
-                      <div class="form-group pull-in clearfix">
-                        <div  class="col-sm-3">
-                        <label>省份</label>
-                          <div id="slt_sheng"></div>
-                        </div>
-                        <div class="col-sm-3">
-                          <label>城市</label>
-                          <div id="slt_shi"></div>
-                        </div>
-                        <div class="col-sm-3">
-                          <label>区/镇</label>
-                          <div id="slt_xian"></div>
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label>详细地址</label>
-                        <input type="text" class="form-control" name="addr" data-required="true">
-                      </div>
-                      <div class="form-group pull-in clearfix">
-                      <div class="col-sm-6">
-                        <label>营业执照号</label>
-                        <input type="text" class="form-control" name="licId" data-type="number" data-required="true">
-                        </div>
-                        <div class="col-sm-6">
-                        <label>营业执照有效期</label>
-                        <input type="text" class="form-control" name="licValidity"  data-type="number" data-required="true">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label>法人/联系人</label>
-                        <input type="text" class="form-control" name="corpName" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>法人/联系人证件号</label>
-                        <input type="text" class="form-control" name="idtCard" data-type="number" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>负责人</label>
-                        <input type="text" class="form-control" name="contactName" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>负责人手机号</label>
-                        <input type="text" class="form-control" name="telephone" data-type="phone" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>客服电话</label>
-                        <input type="text" class="form-control" name="servTel" data-type="phone" data-required="true">
+                    </form>
+                  </div>
+              </header>
+
+
+
+              <section class="scrollable wrapper w-f">
+              	<div class="manageCont">
+
+                      <div class="boundForm">
+              		  <form data-validate="parsley"  name="RegisterStore" action="RegisterStore" id="form_store_edit" enctype="application/x-www-form-urlencoded" method="POST" class="form-horizontal">
+                       <div class="form_item clearfix">
+                        <label class="form_tit">商户注册</label>
+                       </div>
+
+                      <div class="form_item clearfix">
+                        <label class="item-label">商户简称：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="mchntName" value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
                       </div>
 
-                      <div class="form-group">
-                        <label>结算方式</label>
-                        <select data-required="true" name="autoSettle"  class="form-control m-t">
+                      <div class="form_item clearfix">
+                        <label class="item-label">商户全称：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="mchntFullName"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+    	                <label class="item-label">城市：    	<i>*</i>    	</label>
+                        <div class="controls">
+{:W('Manage/City/three',array(array('province_code','city_code','district_code'),array(I('province_code'),I('city_code'),I('district_code'))));}
+                        </div>
+                      </div>
+
+                      <div class="form_item clearfix">
+                        <label class="item-label">详细地址：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="addr"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+                        <label class="item-label">营业执照号：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="licId"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+                        <label class="item-label">执照有效期：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="licValidity"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+                        <label class="item-label">法人/联系人：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="corpName"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+                        <label class="item-label">证件号：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="idtCard" name="idtCard"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+                        <label class="item-label">负责人：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="contactName"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+                        <label class="item-label">负责人手机号：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="telephone"  data-type="phone"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+                        <label class="item-label">客服电话：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="servTel" data-type="phone"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+                      <div class="form_item clearfix">
+                        <label class="item-label">负责人：    	<i>*</i>    	</label>
+                           <div class="controls">
+                        <input type="text" id="" name="contactName"  value="" class="textBox" placeholder="" data-required="true" />
+                           </div>
+                      </div>
+
+                      <div class="form_item clearfix">
+                        <label class="item-label">结算方式：    	<i>*</i>    	</label>
+                        <select data-required="true" name="autoSettle"  class="citySelect">
                             <option value="">--请选择--</option>
                             <option value="1">自动结算</option>
                             <option value="2">手工提现</option>
                           </select>
                       </div>
                     </div>
-                    <footer class="panel-footer text-right bg-light lter">
-                      <button type="submit" class="btn btn-success btn-s-xs">提交</button>
+                    <footer class="panel-footer text-center bg-light lter">
+                      <button type="submit" class="return_btn">提交</button>
+                      <button class="return_btn" onclick="javascript:history.back(-1);return false;">返 回</button>
                     </footer>
+                      </form>
+                    </div>
                   </section>
-                </form>
-              </div>
-            </div>
+
+<footer class="footer bg-white b-t">
+                {$_page}
+              </footer>
+            </section>
           </section>
         </section>
       </section>
-      <aside class="bg-light lter b-l aside-md hide" id="notes">
-        <div class="wrapper">Notification</div>
-      </aside>
     </section>
   </section>
-</section>
 </block>
 
+<block name="script">
+<js href="__STATIC__/jquery.noty.packaged.min.js"/>
+<js href="__JS__/list.js"/>
+
+<script type="text/javascript" charset="utf-8">
+  $(document).ready(function(){
+	$('.popup-qrcode-view').magnificPopup();
+    $('.popup-store-submit').magnificPopup({
+      disableOn: 700,
+      type: 'iframe',
+      mainClass: 'mfp-fade',
+      removalDelay: 160,
+      preloader: false,
+      closeOnBgClick: false,
+      enableEscapeKey:false,
+      fixedContentPos: false,
+      callbacks: {
+        beforeOpen: function(){
+          $(this.content).find(".mfp-close").hide();
+        },
+        open: function(){
+          var content = this.content;
+          $(content).find(".mfp-close").hide();
+          $(content).find("iframe").load(function(event) {
+            //console.log('load2',this,arguments);
+            $(content).find(".mfp-close").show();
+          });
+        },
+        close: function(){
+          //console.log('ssss3',arguments);
+          document.location.reload();
+        }
+      }
+    });
+		$('.view_audit_status').magnificPopup({
+			type: 'iframe',type: 'iframe',
+		});
+		$('#download-store').magnificPopup({
+			disableOn: 700,
+			type: 'iframe',
+			mainClass: 'mfp-fade',
+			removalDelay: 160,
+			preloader: false,
+			closeOnBgClick: true,
+			enableEscapeKey:false,
+			fixedContentPos: false,
+			callbacks: {
+				beforeOpen: function(){
+					$(this.content).find(".mfp-close").hide();
+				},
+				open: function(){
+					var content = this.content;
+					$(content).find(".mfp-close").hide();
+					$(content).find("iframe").load(function(event) {
+						//console.log('load2',this,arguments);
+						$(content).find(".mfp-close").show();
+					});
+				},
+				close: function(){
+					//console.log('ssss3',arguments);
+					document.location.reload();
+				}
+			}
+		});
+    $('.popup-store-view').magnificPopup({
+      disableOn: 700,
+      type: 'iframe',
+      mainClass: 'mfp-fade',
+      removalDelay: 160,
+      preloader: false
+    });
+
+    $(".btn_store_edit").click(function(event){
+      var s = $(this).attr("data-audit-status");
+      if(s == "AUDITING"){
+        alert("正在审核，不能修改！");
+        event.preventDefault();
+              return false;
+      }
+      if(s == "AUDIT_SUCCESS"){
+        if(!confirm('门店已经通过审核，确认修改？')){
+          event.preventDefault();
+                  return false;
+              }
+      }
+    });
+
+    $("td>span.store_id").dblclick(toggle_detail);
+    $("a.btn_store_more").click(toggle_detail);
+    function toggle_detail(event){
+      var tr = $(this).closest('tr');
+      tr.next().toggle();
+    }
+
+    //搜索js
+    $(".search_box .slt_field_name").change(function(event){
+      var slt = $(this).attr("data-target");
+      var val = $(this).find("option:selected").attr("value");
+      if(slt && val){
+        $(this).parent().find(slt).attr("name",val);
+      }
+    });
+    $(".search_box .slt_field_name").change();
+    var vals = $(".search_box .slt_field_name option").attr("value");
+    //alert(vals);
+    $(".search_box form").submit(function(event) {
+      /*var data = $(this).serialize();
+      alert(data);
+      return false;*/
+    });
+  });
+
+</script>
+
+</block>
